tests/baselines/reference/tsxElementResolution10.errors.txt
tests/cases/conformance/jsx/file.tsx(13,1): error TS2605: JSX element type '{ x: number; }' is not a constructor function for JSX elements.
  Property 'render' is missing in type '{ x: number; }' but required in type 'ElementClass'.
tests/cases/conformance/jsx/file.tsx(13,2): error TS2322: Type '{ x: number; }' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(19,2): error TS2322: Type '{ x: number; render: number; }' is not assignable to type 'string'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    declare module JSX {
    	interface Element { }
    	interface ElementClass {
    		render: any;
    	}
    	interface IntrinsicElements { }
    }
    
    interface Obj1type {
    	new(n: string): { x: number };
    }
    var Obj1: Obj1type;
    <Obj1 x={10} />; // Error, no render member
    ~~~~~~~~~~~~~~~
!!! error TS2605: JSX element type '{ x: number; }' is not a constructor function for JSX elements.
!!! error TS2605:   Property 'render' is missing in type '{ x: number; }' but required in type 'ElementClass'.
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:4:3: 'render' is declared here.
     ~~~~
!!! error TS2322: Type '{ x: number; }' is not assignable to type 'string'.
    
    interface Obj2type {
    	(n: string): { x: number; render: any; };
    }
    var Obj2: Obj2type;
    <Obj2 x={32} render={100} />; // OK
     ~~~~
!!! error TS2322: Type '{ x: number; render: number; }' is not assignable to type 'string'.
    